--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,29 @@
-# Binance API Configuration
-BINANCE_API_KEY=
-BINANCE_API_SECRET=
+# 数据库配置
+DATABASE_URL=sqlite:///./database.db
 
-# WeChat Webhook (optional)
+# 币安API配置
+BINANCE_BASE_URL=https://fapi.binance.com
+BINANCE_API_KEY=your_binance_api_key
+BINANCE_API_SECRET=your_binance_api_secret
+
+# 微信机器人配置
 WECHAT_WEBHOOK_URL=your_wechat_webhook_url
+
+# 后端服务配置
+BACKEND_HOST=0.0.0.0
+BACKEND_PORT=8000
+BACKEND_RELOAD=false
+
+# CORS配置
+CORS_ALLOW_ORIGINS=*
+
+# 默认监控参数
+DEFAULT_1_VOLUME_PERCENT=12.5
+DEFAULT_2_RISE_PERCENT=10.0
+DEFAULT_1_REMINDER_INTERVAL=60
+DEFAULT_2_REMINDER_INTERVAL=60
+DEFAULT_3_PRICE_ERROR=1.0
+DEFAULT_3_MIDDLE_KLINE_CNT=3
+DEFAULT_3_FAKE_KLINE_CNT=5
+DEFAULT_3_DEDUP_ENABLED=true
+MAX_LOOKBACK_DAYS=30
