--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,48 +2,27 @@ version: '3.8'
 
 services:
   backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+    build: ./backend
     container_name: kline-backend
-    restart: unless-stopped
-    ports:
-      - "8000:8000"
+    restart: always
     volumes:
       - ./backend/database.db:/app/database.db
       - ./backend/logs:/app/logs
-    environment:
-      - DATABASE_URL=sqlite:///./database.db
-      - BINANCE_BASE_URL=https://fapi.binance.com
-      - BINANCE_API_KEY=${BINANCE_API_KEY:-}
-      - BINANCE_API_SECRET=${BINANCE_API_SECRET:-}
-      - WECHAT_WEBHOOK_URL=${WECHAT_WEBHOOK_URL:-}
-      - BACKEND_HOST=0.0.0.0
-      - BACKEND_PORT=8000
-      - BACKEND_RELOAD=false
-      - CORS_ALLOW_ORIGINS=*
-    networks:
-      - kline-network
+    env_file:
+      - ./backend/.env
+    ports:
+      - "8000:8000"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 10s
 
   frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
+    build: ./frontend
     container_name: kline-frontend
-    restart: unless-stopped
+    restart: always
     ports:
       - "80:80"
     depends_on:
       - backend
-    networks:
-      - kline-network
-
-networks:
-  kline-network:
-    driver: bridge
