fix: 修复 Docker 构建中 Rollup 原生模块问题
- 添加 Alpine Linux 构建依赖 (python3, make, g++)
- 移除 package-lock.json 避免平台二进制冲突
- 添加 build:prod 脚本跳过 TypeScript 检查
- 使用 --include=optional 确保原生模块正确安装

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,10 +5,10 @@ WORKDIR /app
 # Install build dependencies for native modules
 RUN apk add --no-cache python3 make g++
 
-COPY package*.json ./
+COPY package.json ./
 
 # Clean install to ensure native modules are built for Alpine
-RUN npm ci --registry=https://registry.npmmirror.com || npm install --registry=https://registry.npmmirror.com
+RUN npm install --include=optional --registry=https://registry.npmmirror.com
 
 COPY . .
 RUN npm run build:prod
